--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Calistoga&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Calistoga&family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Inconsolata:wght@200..900&family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Calistoga&family=Space+Grotesk:wght@300..700&display=swap');
 *{
 
   margin: 0;
@@ -7,36 +8,158 @@
 }
 
 body{
-  background-color:#eaf2ef
+  background-color:#FFF8EE;
+  font-family: "Bricolage Grotesque", sans-serif;
 }
 
-.container{
-
-display: flex;
+.homepage {
+  text-align: center;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.homepage h1 {
+  color: black;
+  font-size: 5rem;
+  /* text-align: center; */
+  text-align: left;
+  margin-top: 30px;
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-weight: 700;
+  margin-left: 2px;
+}
+
+/* .homepage p {
+  text-align: center;
+  border-radius: 90px;
+  margin: 10px;
+  
+
+  background-color: #912f56;
+  color: black;
+  width: 70%;
+  padding: 10px;
+  font-family: "Cookie", cursive;
+  font-size: 10rem;
+} */
+
+.homepage h3 {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-size: 2.5rem;
+  color: black;
+  display: flex;
+  font-weight: 400;
+}
+
+.myprojectsection h3{
+  text-align: center;
+  /* margin: 150px 50px; */
+  margin-bottom: 40px;
+  font-size: 3rem;
+  
+
+}
+
+
+#me {
+  /* position: absolute;
+  z-index: -1;
+  
+  left: 50%;
+  top: 58%;
+  transform: translate(-50%, -50%); */
+  height: 350px;
+}
+
+.card{
+  display: flex;
+  flex-direction: row
+}
+.projects div {
+  display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100%;
+  flex-direction: column;
+  font-size: 2rem;
+  height: 200px;
+  width: 200px;
+  border: 1px solid;
+  padding: 42px;
+  border-radius: 20px;
 }
-.container h1{
-  color: #912f56;
-  font-family: "Calistoga", serif;
-  font-weight: 400;
-  font-size: 5rem;
+.projects {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 50px;
 }
 
-@media (max-width: 768px) {
+/* CSS FOR NAVABAR */
+nav {
+  bottom: 8%;
+  position: fixed;
+  background: black;
+  color: white;
+  padding: 15px 40px;
+  border-radius: 54px;
+  font-family: "Bricolage Grotesque", sans-serif;
+
+}
+ul {
+  /* text-decoration: none; */
+  display: flex;
+  gap: 84px;
+  font-size: 1.3rem;
+  font-weight:500;
+}
+li {
+
+  list-style: none;
+}
+
+
+
+@media screen and (min-width :600px) {
 
   body{
-   
-  
+
   }
 
-  .container h1{
-    text-align: center;
-    font-size: 2rem;
-    text-align: center;
+  #me {
+   position: relative;
   }
   
+  .homepage h1{
+    display: flex;
+    justify-content: space-around;
+  
+
+  }
+  .homepage p{
+  
+    font-size: 1.5rem;
+    
+  }
+  .homepage {
+    display: flex;
+    flex-direction: row;
+
+    height: 90vh;
+    width: 100%;
+    font-size: 4rem;
+
+    justify-content: space-around;
+}
+
+#me {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  position: relative;
+  height: 500px;
+}
 }
