--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,55 @@ body{
   body{
   
   }
+  .myprojectsection {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 34px;
+    height: 237vh;
+}
+.box-skiils {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  border: 1px solid black;
+  background: black;
+  width: 100%;
+  margin-top: 22px;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.myprojectsection h3 {
+  text-align: center;
+  /* margin: 150px 50px; */
+  margin-bottom: 40px;
+  font-size: 50px;
+}
+.myskills {
+  height: 137vh;
+  background-color: black;
+  color: #fafafa;
+}
+
+progress.file {
+  width: 284px;
+  height: 13px;
+  appearance: none;
+  margin-left: 18px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+}h2.medio {
+  font-size: 50px;
+  margin-top: 92px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* text-align: center; */
+  /* justify-content: center; */
+  /* align-items: center; */
+ 
+}
   
 
   .toggel {
